--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
-    "devextreme": "^22.1.3",
+    "devextreme": "^22.1.6",
     "devextreme-angular": "^22.1.3",
+    "devextreme-aspnet-data": "^2.8.6",
+    "devextreme-aspnet-data-nojquery": "^2.8.6",
     "devextreme-schematics": "^1.4.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
